@@ -174,24 +174,33 @@ Automatic Mounting
 ==================
 
 If you want to mount and umount an S3QL file system automatically at
-system startup and shutdown, you have two options. You can either add
-it to `/etc/fstab` like any other file system, or you can create
-a dedicated init script.
+system startup and shutdown, you should do so with one dedicated S3QL
+init script for each S3QL file system.
 
-The first option is simpler, but not recommended. Since file systems
-mounted in `/etc/fstab` will be unmounted with the `umount` command,
-your system will not wait until all data has been uploaded but
-shutdown (or restart) immediately (this is a FUSE limitation, see
-`issue 159 <http://code.google.com/p/s3ql/issues/detail?id=159>`_). If
-for some reason you want to do this nevertheless, you have to copy the
-`mount.s3ql` program to `/sbin` and use the `_netdev` mount option,
-e.g. ::
+Under Ubuntu, an appropriate upstart job can be defined by creating a
+file `/etc/init/s3ql.conf` that could look like this:
 
-  s3://my_s3ql_bucket     /mnt/s3     s3ql    allow-other,_netdev  0  0
+.. literalinclude:: ../../contrib/s3ql.conf
+   :linenos:
+   :lines: 5-
 
+.. NOTE::
 
-The better option is to use a dedicated init script that mounts and
-umounts the file system using the `mount.s3ql` and `umount.s3ql`
-commands. The correct place and format for this script depends on your
-distribution, usual locations are `/etc/init.d/` and `/etc/init/`.
+   Mounting S3QL file systems from `/etc/fstab` is not recommended for
+   several reasons:
 
+   * file systems mounted in `/etc/fstab` will be unmounted with the
+     `umount` command, so your system will not wait until all data has
+     been uploaded but shutdown (or restart) immediately (this is a
+     FUSE limitation, see `issue 159
+     <http://code.google.com/p/s3ql/issues/detail?id=159>`_).
+
+   * There is no way to tell the system that mounting S3QL requires a
+     Python interpreter to be available, so it may attempt to run
+     `mount.s3ql` before it has mounted the volume containing the
+     Python interpreter.
+
+   * There is no standard way to tell the system that internet
+     connection has to be up before the S3QL file system can be
+     mounted.
+     
